--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css" />
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
@@ -44,48 +45,73 @@
                 <a class="header__user-btn" href="#">Log in</a>
                 /
                 <a class="header__user-btn" href="#">Register</a>
-
               </div>
             </div>
           </div>
-
-          <div class="header-body">
-            <div class="container">
-              <div class="header-body__inner">
-                <div class="header__main">
-                  <div class="header__content">
-                    <a class="header__play">
-                      <a class="header__play-btn" >
-                        <svg width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <circle cx="26" cy="26" r="26" fill="#FF3F3A"/>
-                          <path d="M32.5 25.134C33.1667 25.5189 33.1667 26.4811 32.5 26.866L23.5 32.0622C22.8333 32.4471 22 31.966 22 31.1962L22 20.8038C22 20.034 22.8333 19.5529 23.5 19.9378L32.5 25.134Z" fill="white"/>
-                          </svg>
-                      </a>
-                      Play showreel
-                    </a>
-                    <h1 class="header__title">
-                      Enjoy studying with Createx Online Courses
-                    </h1>
-                    <div class="header__content-buttons">
-                      <a class="header__content-btn button button--empty"><span>About us</span></a>
-                      <a class="header__content-btn button">Explore courses</a>
-                    </div>
-                  </div>
-                  <img class="header__image" src="/images/illustration.svg" alt="">
-                </div>
-                <div class="header__row"></div>
-              </div>
-
-            </div>
-          </div>
-
-
         </div>
       </div>
+      
+        <div class="header-body">
+          <div class="container">
+            <div class="header-body__inner">
+              <div class="header__main">
+                <div class="header__content">
+                  <a class="header__play" href="https://youtu.be/MDEyAoPvzco?si=JL0UooHfYh2v4Ubi" data-fancybox>
+                    <svg width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <circle cx="26" cy="26" r="26" fill="#FF3F3A" />
+                      <path
+                        d="M32.5 25.134C33.1667 25.5189 33.1667 26.4811 32.5 26.866L23.5 32.0622C22.8333 32.4471 22 31.966 22 31.1962L22 20.8038C22 20.034 22.8333 19.5529 23.5 19.9378L32.5 25.134Z"
+                        fill="white" />
+                    </svg>
+                    Play showreel
+                  </a>
+                  <h1 class="header__title">
+                    Enjoy studying with Createx Online Courses
+                  </h1>
+                  <div class="header__content-buttons">
+                    <a class="header__content-btn button button--empty"><span>About us</span></a>
+                    <a class="header__content-btn button">Explore courses</a>
+                  </div>
+                </div>
+                <img class="header__image" src="/images/illustration.svg" alt="">
+              </div>
+              <ul class="header__row">
+                <li class="header__row-item">
+                  <span>1200</span>
+                  Students graduated
+                </li>
+                <span></span>
+                <li class="header__row-item">
+                  <span>84</span>
+                  Completed courses
+                </li>
+                <span></span>
+                <li class="header__row-item">
+                  <span>16</span>
+                  Qualified tutors
+                </li>
+                <span></span>
+                <li class="header__row-item">
+                  <span>5</span>
+                  Years of experience
+                </li>
+              </ul>
+            </div>
+
+          </div>
+        </div>
+
+
+
+
     </header>
   </div>
-</body>
 
+
+
+</body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
 <script src="js/main.js"></script>
 
 </html>
