--- a/index.html
+++ b/index.html
@@ -97,14 +97,44 @@
                 </li>
               </ul>
             </div>
-
           </div>
         </div>
-
-
-
-
     </header>
+
+
+    <main class="main">
+      <section class="about">
+        <div class="container">
+          <div class="about__inner">
+            <div class="about__createx">
+              <div class="about__createx-content">
+                <div class="about__heading heading">
+                  <p class="heading__subtitle">About us</p>
+                  <h2 class="heading__title">Createx Online School</h2>
+                  <div class="about__text">
+                    <p class="about__paragraph about__paragraph--accent">
+                      Createx Online School is a leader in online studying. We have lots of courses and programs from the main market experts.
+                    </p>
+                    <p class="about__paragraph">
+                      We provide relevant approaches to online learning, internships and employment in the largest companies in the country. Our educational programs help you get a new specialty from scratch. During your studies, we will help you find a job. Check the courses and online events that we organise.
+                    </p>
+                  </div>
+                  <div class="about__btn-box">
+                    <a class="about__btn button button--empty"><span>Explore events</span></a>
+                    <a class="about__btn button">Browse courses</a>
+                  </div>
+
+                </div>
+              </div>
+              <img class="about__img" src="/images/about-img.svg" alt="">
+            </div>
+            <div class="about__values"></div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer"></footer>
+
   </div>
 
 
