finished about section

--- a/index.html
+++ b/index.html
@@ -123,12 +123,34 @@
                     <a class="about__btn button button--empty"><span>Explore events</span></a>
                     <a class="about__btn button">Browse courses</a>
                   </div>
-
+                  
                 </div>
               </div>
               <img class="about__img" src="/images/about-img.svg" alt="">
             </div>
-            <div class="about__values"></div>
+            <div class="about__values">
+              <div class="about__image-box">
+                <img src="/images/numbers-img.jpg" alt="">
+              </div>
+              <ul class="about__numbers">
+                <li class="about__number">
+                  <span>1200</span>
+                  students graduated
+                </li>
+                <li class="about__number">
+                  <span>84</span>
+                  completed courses
+                </li>
+                <li class="about__number">
+                  <span>16</span>
+                  qualified tutors
+                </li>
+                <li class="about__number">
+                  <span>5</span>
+                  years of experience
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
