--- a/index.html
+++ b/index.html
@@ -50,60 +50,61 @@
           </div>
         </div>
       </div>
-      
-        <div class="header-body">
-          <div class="container">
-            <div class="header-body__inner">
-              <div class="header__main">
-                <div class="header__content">
-                  <a class="header__play" href="https://youtu.be/MDEyAoPvzco?si=JL0UooHfYh2v4Ubi" data-fancybox>
-                    <svg width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <circle cx="26" cy="26" r="26" fill="#FF3F3A" />
-                      <path
-                        d="M32.5 25.134C33.1667 25.5189 33.1667 26.4811 32.5 26.866L23.5 32.0622C22.8333 32.4471 22 31.966 22 31.1962L22 20.8038C22 20.034 22.8333 19.5529 23.5 19.9378L32.5 25.134Z"
-                        fill="white" />
-                    </svg>
-                    Play showreel
-                  </a>
-                  <h1 class="header__title">
-                    Enjoy studying with Createx Online Courses
-                  </h1>
-                  <div class="header__content-buttons">
-                    <a class="header__content-btn button button--empty"><span>About us</span></a>
-                    <a class="header__content-btn button">Explore courses</a>
-                  </div>
+
+      <div class="header-body">
+        <div class="container">
+          <div class="header-body__inner">
+            <div class="header__main">
+              <div class="header__content">
+                <a class="header__play" href="https://youtu.be/MDEyAoPvzco?si=JL0UooHfYh2v4Ubi" data-fancybox>
+                  <svg width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="26" cy="26" r="26" fill="#FF3F3A" />
+                    <path
+                      d="M32.5 25.134C33.1667 25.5189 33.1667 26.4811 32.5 26.866L23.5 32.0622C22.8333 32.4471 22 31.966 22 31.1962L22 20.8038C22 20.034 22.8333 19.5529 23.5 19.9378L32.5 25.134Z"
+                      fill="white" />
+                  </svg>
+                  Play showreel
+                </a>
+                <h1 class="header__title">
+                  Enjoy studying with Createx Online Courses
+                </h1>
+                <div class="header__content-buttons">
+                  <a class="header__content-btn button button--empty"><span>About us</span></a>
+                  <a class="header__content-btn button">Explore courses</a>
                 </div>
-                <img class="header__image" src="/images/illustration.svg" alt="">
               </div>
-              <ul class="header__row">
-                <li class="header__row-item">
-                  <span>1200</span>
-                  Students graduated
-                </li>
-                <span></span>
-                <li class="header__row-item">
-                  <span>84</span>
-                  Completed courses
-                </li>
-                <span></span>
-                <li class="header__row-item">
-                  <span>16</span>
-                  Qualified tutors
-                </li>
-                <span></span>
-                <li class="header__row-item">
-                  <span>5</span>
-                  Years of experience
-                </li>
-              </ul>
+              <img class="header__image" src="/images/illustration.svg" alt="">
             </div>
+            <ul class="header__row">
+              <li class="header__row-item">
+                <span>1200</span>
+                Students graduated
+              </li>
+              <span></span>
+              <li class="header__row-item">
+                <span>84</span>
+                Completed courses
+              </li>
+              <span></span>
+              <li class="header__row-item">
+                <span>16</span>
+                Qualified tutors
+              </li>
+              <span></span>
+              <li class="header__row-item">
+                <span>5</span>
+                Years of experience
+              </li>
+            </ul>
           </div>
         </div>
+      </div>
     </header>
 
 
     <main class="main">
-      <section class="about">
+
+      <section class="main__about about">
         <div class="container">
           <div class="about__inner">
             <div class="about__createx">
@@ -111,20 +112,24 @@
                 <div class="about__heading heading">
                   <p class="heading__subtitle">About us</p>
                   <h2 class="heading__title">Createx Online School</h2>
-                  <div class="about__text">
-                    <p class="about__paragraph about__paragraph--accent">
-                      Createx Online School is a leader in online studying. We have lots of courses and programs from the main market experts.
-                    </p>
-                    <p class="about__paragraph">
-                      We provide relevant approaches to online learning, internships and employment in the largest companies in the country. Our educational programs help you get a new specialty from scratch. During your studies, we will help you find a job. Check the courses and online events that we organise.
-                    </p>
-                  </div>
-                  <div class="about__btn-box">
-                    <a class="about__btn button button--empty"><span>Explore events</span></a>
-                    <a class="about__btn button">Browse courses</a>
-                  </div>
-                  
                 </div>
+                <div class="about__text">
+                  <p class="about__paragraph about__paragraph--accent">
+                    Createx Online School is a leader in online studying. We have lots of courses and programs from the
+                    main market experts.
+                  </p>
+                  <p class="about__paragraph">
+                    We provide relevant approaches to online learning, internships and employment in the largest
+                    companies in the country. Our educational programs help you get a new specialty from scratch. During
+                    your studies, we will help you find a job. Check the courses and online events that we organise.
+                  </p>
+                </div>
+                <div class="about__btn-box">
+                  <a class="about__btn button button--empty"><span>Explore events</span></a>
+                  <a class="about__btn button">Browse courses</a>
+                </div>
+
+
               </div>
               <img class="about__img" src="/images/about-img.svg" alt="">
             </div>
@@ -154,6 +159,132 @@
           </div>
         </div>
       </section>
+
+      <section class="main__directions directions">
+        <div class="container">
+          <div class="directions__inner">
+            <div class="directions__heading heading heading--text-center">
+              <p class="heading__subtitle heading__subtitle--text-center">our main directions</p>
+              <h2 class="heading__title">What do we teach</h2>
+            </div>
+            <div class="directions__body">
+              <ul class="directions__filter-box">
+                <li class="directions__filter-item">
+                  <button class="directions__filter-btn directions__filter-btn--active" type="button"
+                    data-filter="all">All</button>
+                </li>
+                <li class=" directions__filter-item">
+                  <button class="directions__filter-btn" type="button"
+                    data-filter=".directions__list-item--marketing">Marketing</button>
+                </li>
+                <li class=" directions__filter-item">
+                  <button class="directions__filter-btn" type="button"
+                    data-filter=".directions__list-item--management">Management</button>
+                </li>
+                <li class=" directions__filter-item">
+                  <button class="directions__filter-btn" type="button" data-filter=".directions__list-item--hr">Hr &
+                    Recruting</button>
+                </li>
+                <li class=" directions__filter-item">
+                  <button class="directions__filter-btn" type="button"
+                    data-filter=".directions__list-item--design">Design</button>
+                </li>
+                <li class=" directions__filter-item">
+                  <button class="directions__filter-btn" type="button"
+                    data-filter=".directions__list-item--development">Development</button>
+                </li>
+              </ul>
+              <ul class=" directions__list">
+                <li class="mix directions__list-item directions__list-item--marketing" data-order="1">
+                  <a class="directions__list-link directions__list-link--active" href="#">
+                    <div class="directions__image-box">
+                      <img src="images/directions/1.jpg" alt="">
+                    </div>
+                    <div class="directions__link-content">
+                      <div class="directions__link-tag">Marketing</div>
+                      <p class="directions__link-text">Odio posuere netus quisque faucibus lectus arcu donec. Eget
+                        dictum
+                        eu viverra faucibus. Viverra scelerisque consequat.</p>
+                      <div class="directions__link-btn">Check courses</div>
+                    </div>
+                  </a>
+                </li>
+
+                <li class="mix directions__list-item directions__list-item--management" data-order="2">
+                  <a class="directions__list-link" href="#">
+                    <div class="directions__image-box">
+                      <img src="images/directions/2.jpg" alt="">
+                    </div>
+                    <div class="directions__link-content">
+                      <div class="directions__link-tag">Management</div>
+                      <p class="directions__link-text">Odio posuere netus quisque faucibus lectus arcu donec. Eget
+                        dictum
+                        eu viverra faucibus. Viverra scelerisque consequat.</p>
+                      <div class="directions__link-btn">Check courses</div>
+                    </div>
+                  </a>
+                </li>
+
+                <li class="mix directions__list-item directions__list-item--hr" data-order="3">
+                  <a class="directions__list-link" href="#">
+                    <div class="directions__image-box">
+                      <img src="images/directions/3.jpg" alt="">
+                    </div>
+                    <div class="directions__link-content">
+                      <div class="directions__link-tag">HR & Recruting</div>
+                      <p class="directions__link-text">Odio posuere netus quisque faucibus lectus arcu donec. Eget
+                        dictum
+                        eu viverra faucibus. Viverra scelerisque consequat.</p>
+                      <div class="directions__link-btn">Check courses</div>
+                    </div>
+                  </a>
+                </li>
+
+                <li class="mix directions__list-item directions__list-item--design" data-order="4">
+                  <a class="directions__list-link" href="#">
+                    <div class="directions__image-box">
+                      <img src="images/directions/4.jpg" alt="">
+                    </div>
+                    <div class="directions__link-content">
+                      <div class="directions__link-tag">Design</div>
+                      <p class="directions__link-text">Odio posuere netus quisque faucibus lectus arcu donec. Eget
+                        dictum
+                        eu viverra faucibus. Viverra scelerisque consequat.</p>
+                      <div class="directions__link-btn">Check courses</div>
+                    </div>
+                  </a>
+                </li>
+
+
+                <li class="mix directions__list-item directions__list-item--development" data-order="5">
+                  <a class="directions__list-link" href="#">
+                    <div class="directions__image-box">
+                      <img src="images/directions/5.jpg" alt="">
+                    </div>
+                    <div class="directions__link-content">
+                      <div class="directions__link-tag">Development</div>
+                      <p class="directions__link-text">Odio posuere netus quisque faucibus lectus arcu donec. Eget
+                        dictum
+                        eu viverra faucibus. Viverra scelerisque consequat.</p>
+                      <div class="directions__link-btn">Check courses</div>
+                    </div>
+                  </a>
+                </li>
+
+                <li class="mix directions__list-item directions__list-item--empty" data-order="6">
+                  <span>New studding program coming soon...</span>
+                </li>
+
+
+
+
+
+              </ul>
+            </div>
+          </div>
+      </section>
+
+
     </main>
     <footer class="footer"></footer>
 
@@ -164,6 +295,7 @@
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+<script src="js/mixitup.min.js"></script>
 <script src="js/main.js"></script>
 
 </html>
