deleted unnecessary files

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css" />
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <!-- <link rel="stylesheet" href="slick/slick.css">
+  <link rel="stylesheet" href="slick/slick-theme.css"> -->
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
@@ -284,7 +287,167 @@
           </div>
       </section>
 
+      <section class="main__cert cert">
+        <div class="container">
+          <div class="cert__inner">
+            <div class="cert__content">
+              <div class="cert__heading heading">
+                <p class="heading__subtitle">createx certificate</p>
+                <h2 class="heading__title">Your expertise will be confirmed</h2>
+              </div>
+              <p class="sert__text">
+                We are accredited by international professional organizations and institutes:
+              </p>
+              <ul class="sert__logos">
+                <li class="sert__logos-item">
+                  <img src="images/logos/1.svg" alt="">
+                </li>
+                <li class="sert__logos-item">
+                  <img src="images/logos/2.svg" alt="">
+                </li>
+                <li class="sert__logos-item">
+                  <img src="images/logos/3.svg" alt="">
+                </li>
+              </ul>
+            </div>
+            <div class="cert__image-box">
+              <img src="images/award.jpeg" alt="Сертифікат">
+            </div>
+          </div>
+        </div>
+      </section>
 
+      <section class="main__team team">
+        <div class="container">
+          <div class="team__inner">
+            <div class="team__heading heading">
+              <p class="heading__subtitle">Best tutors are all here</p>
+              <h2 class="heading__title">Meet our team</h2>
+            </div>
+            <div class="team__slider">
+              
+              <div class="team__slide">
+                <div class="team__image-box">
+                  <div class="team__image">
+                    <img src="images/team/1.jpg" alt="">
+                  </div>
+                  <ul class="team__socials">
+                    <li class="team__socials-item">
+                      <a class="team__socials-link" href="#"></a>
+                    </li>
+                    <li class="team__socials-item">
+                      <a class="team__socials-link" href="#"></a>
+                    </li>
+                    <li class="team__socials-item">
+                      <a class="team__socials-link" href="#"></a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="team__info">
+                  <div class="team__info-name">Dianne Russell</div>
+                  <div class="team__info-position">Founder and CEO</div>
+                </div>
+              </div>
+
+              <div class="team__slide">
+                  <div class="team__image-box">
+                    <div class="team__image">
+                      <img src="images/team/2.jpg" alt="">
+                    </div>
+                    <ul class="team__socials">
+                      <li class="team__socials-item">
+                        <a class="team__socials-link" href="#"></a>
+                      </li>
+                      <li class="team__socials-item">
+                        <a class="team__socials-link" href="#"></a>
+                      </li>
+                      <li class="team__socials-item">
+                        <a class="team__socials-link" href="#"></a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="team__info">
+                    <div class="team__info-name">Jerome Bell</div>
+                    <div class="team__info-position">Founder and Program Director</div>
+                  </div>
+              </div>
+
+              <div class="team__slide">
+                <div class="team__image-box">
+                  <div class="team__image">
+                    <img src="images/team/Kristin_Watson.jpg" alt="">
+                  </div>
+                  <ul class="team__socials">
+                    <li class="team__socials-item">
+                      <a class="team__socials-link" href="#"></a>
+                    </li>
+                    <li class="team__socials-item">
+                      <a class="team__socials-link" href="#"></a>
+                    </li>
+                    <li class="team__socials-item">
+                      <a class="team__socials-link" href="#"></a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="team__info">
+                  <div class="team__info-name">Kristin Watson</div>
+                  <div class="team__info-position">Marketer, Curator of Marketing Course</div>
+                </div>
+              </div>
+
+              <div class="team__slide">
+                <div class="team__image-box">
+                  <div class="team__image">
+                    <img src="images/team/Marvin_McKinney.jpg" alt="">
+                  </div>
+                  <ul class="team__socials">
+                    <li class="team__socials-item">
+                      <a class="team__socials-link" href="#"></a>
+                    </li>
+                    <li class="team__socials-item">
+                      <a class="team__socials-link" href="#"></a>
+                    </li>
+                    <li class="team__socials-item">
+                      <a class="team__socials-link" href="#"></a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="team__info">
+                  <div class="team__info-name">Marvin McKinney</div>
+                  <div class="team__info-position">PM, Curator of Management Course</div>
+                </div>
+              </div>
+
+              <div class="team__slide">
+                <div class="team__image-box">
+                  <div class="team__image">
+                    <img src="images/team/1.jpg" alt="">
+                  </div>
+                  <ul class="team__socials">
+                    <li class="team__socials-item">
+                      <a class="team__socials-link" href="#"></a>
+                    </li>
+                    <li class="team__socials-item">
+                      <a class="team__socials-link" href="#"></a>
+                    </li>
+                    <li class="team__socials-item">
+                      <a class="team__socials-link" href="#"></a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="team__info">
+                  <div class="team__info-name">Dianne Russell</div>
+                  <div class="team__info-position">Founder and CEO</div>
+                </div>
+              </div>
+
+
+            </div>
+
+
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer"></footer>
 
@@ -295,6 +458,8 @@
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+<!-- <script src="slick/slick.min.js"></script> -->
+<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="js/mixitup.min.js"></script>
 <script src="js/main.js"></script>
 
