--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
           <div class="header-top__inner">
             <a class="header__logo logo" href="#">
-              <img src="images/logo.svg" alt="logo">
+              <img src=".images/logo.svg" alt="logo">
             </a>
             <nav class="header__nav">
               <ul class="header__nav-list">
@@ -76,7 +76,7 @@
                   <a class="header__content-btn button">Explore courses</a>
                 </div>
               </div>
-              <img class="header__image" src="/images/illustration.svg" alt="">
+              <img class="header__image" src=".images/illustration.svg" alt="">
             </div>
             <ul class="header__row">
               <li class="header__row-item">
@@ -134,11 +134,11 @@
 
 
               </div>
-              <img class="about__img" src="/images/about-img.svg" alt="">
+              <img class="about__img" src="./images/about-img.svg" alt="">
             </div>
             <div class="about__values">
               <div class="about__image-box">
-                <img src="/images/numbers-img.jpg" alt="">
+                <img src="./images/numbers-img.jpg" alt="">
               </div>
               <ul class="about__numbers">
                 <li class="about__number">
@@ -201,7 +201,7 @@
                 <li class="mix directions__list-item directions__list-item--marketing" data-order="1">
                   <a class="directions__list-link directions__list-link--active" href="#">
                     <div class="directions__image-box">
-                      <img src="images/directions/1.jpg" alt="">
+                      <img src="./images/directions/1.jpg" alt="">
                     </div>
                     <div class="directions__link-content">
                       <div class="directions__link-tag">Marketing</div>
@@ -216,7 +216,7 @@
                 <li class="mix directions__list-item directions__list-item--management" data-order="2">
                   <a class="directions__list-link" href="#">
                     <div class="directions__image-box">
-                      <img src="images/directions/2.jpg" alt="">
+                      <img src="./images/directions/2.jpg" alt="">
                     </div>
                     <div class="directions__link-content">
                       <div class="directions__link-tag">Management</div>
@@ -231,7 +231,7 @@
                 <li class="mix directions__list-item directions__list-item--hr" data-order="3">
                   <a class="directions__list-link" href="#">
                     <div class="directions__image-box">
-                      <img src="images/directions/3.jpg" alt="">
+                      <img src="./images/directions/3.jpg" alt="">
                     </div>
                     <div class="directions__link-content">
                       <div class="directions__link-tag">HR & Recruting</div>
@@ -246,7 +246,7 @@
                 <li class="mix directions__list-item directions__list-item--design" data-order="4">
                   <a class="directions__list-link" href="#">
                     <div class="directions__image-box">
-                      <img src="images/directions/4.jpg" alt="">
+                      <img src="./images/directions/4.jpg" alt="">
                     </div>
                     <div class="directions__link-content">
                       <div class="directions__link-tag">Design</div>
@@ -262,7 +262,7 @@
                 <li class="mix directions__list-item directions__list-item--development" data-order="5">
                   <a class="directions__list-link" href="#">
                     <div class="directions__image-box">
-                      <img src="images/directions/5.jpg" alt="">
+                      <img src="./images/directions/5.jpg" alt="">
                     </div>
                     <div class="directions__link-content">
                       <div class="directions__link-tag">Development</div>
@@ -300,18 +300,18 @@
               </p>
               <ul class="sert__logos">
                 <li class="sert__logos-item">
-                  <img src="images/logos/1.svg" alt="">
+                  <img src="./images/logos/1.svg" alt="">
                 </li>
                 <li class="sert__logos-item">
-                  <img src="images/logos/2.svg" alt="">
+                  <img src="./images/logos/2.svg" alt="">
                 </li>
                 <li class="sert__logos-item">
-                  <img src="images/logos/3.svg" alt="">
+                  <img src="./images/logos/3.svg" alt="">
                 </li>
               </ul>
             </div>
             <div class="cert__image-box">
-              <img src="images/award.jpeg" alt="Сертифікат">
+              <img src="./images/award.jpeg" alt="Сертифікат">
             </div>
           </div>
         </div>
@@ -346,7 +346,7 @@
               <div class="team__slide">
                 <div class="team__image-box">
                   <div class="team__image">
-                    <img src="images/team/1.jpg" alt="">
+                    <img src="./images/team/1.jpg" alt="">
                   </div>
                   <ul class="team__socials">
                     <li class="team__socials-item">
@@ -397,7 +397,7 @@
               <div class="team__slide">
                 <div class="team__image-box">
                   <div class="team__image">
-                    <img src="images/team/2.jpg" alt="">
+                    <img src="./images/team/2.jpg" alt="">
                   </div>
                   <ul class="team__socials">
                     <li class="team__socials-item">
@@ -448,7 +448,7 @@
               <div class="team__slide">
                 <div class="team__image-box">
                   <div class="team__image">
-                    <img src="images/team/Kristin_Watson.jpg" alt="">
+                    <img src="./images/team/Kristin_Watson.jpg" alt="">
                   </div>
                   <ul class="team__socials">
                     <li class="team__socials-item">
@@ -550,7 +550,7 @@
               <div class="team__slide">
                 <div class="team__image-box">
                   <div class="team__image">
-                    <img src="images/team/1.jpg" alt="">
+                    <img src="./images/team/1.jpg" alt="">
                   </div>
                   <ul class="team__socials">
                     <li class="team__socials-item">
@@ -601,10 +601,9 @@
           </div>
         </div>
       </section>
+      <footer class="footer"></footer>
     </main>
-    <footer class="footer"></footer>
 
-  </div>
 
 
 
