--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
           <div class="header-top__inner">
             <a class="header__logo logo" href="#">
-              <img src=".images/logo.svg" alt="logo">
+              <img src="./images/logo.svg" alt="logo">
             </a>
             <nav class="header__nav">
               <ul class="header__nav-list">
@@ -59,7 +59,7 @@
           <div class="header-body__inner">
             <div class="header__main">
               <div class="header__content">
-                <a class="header__play" href="https://youtu.be/MDEyAoPvzco?si=JL0UooHfYh2v4Ubi" data-fancybox>
+                <a class="header__play" href="https://www.youtube.com/watch?v=Wx7vo__48oE" data-fancybox>
                   <svg width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="26" cy="26" r="26" fill="#FF3F3A" />
                     <path
@@ -76,7 +76,7 @@
                   <a class="header__content-btn button">Explore courses</a>
                 </div>
               </div>
-              <img class="header__image" src=".images/illustration.svg" alt="">
+              <img class="header__image" src="./images/illustration.svg" alt="">
             </div>
             <ul class="header__row">
               <li class="header__row-item">
