--- a/index.html
+++ b/index.html
@@ -730,6 +730,79 @@
 
       </section>
 
+      <section class="main__companies companies">
+        <div class="container">
+          <div class="companies__inner">
+            <div class="companies__heading heding heading--text-center">
+              <p class="companies__subtitle">TESTIMONIALS</p>
+              <h2 class="companies__title">What our students say</h2>
+            </div>
+            <ul class="companies__grid">
+              <li class="companies__grid-item">
+                <a class="companies__grid-link" href="#">
+                  <img src="./images/logos/logo-11.svg" alt="#">
+                </a>
+              </li>
+              <li class="companies__grid-item">
+                <a class="companies__grid-link" href="#">
+                  <img src="./images/logos/logo-11.svg" alt="#">
+                </a>
+              </li>
+              <li class="companies__grid-item">
+                <a class="companies__grid-link" href="#">
+                  <img src="./images/logos/logo-11.svg" alt="#">
+                </a>
+              </li>
+              <li class="companies__grid-item">
+                <a class="companies__grid-link" href="#">
+                  <img src="./images/logos/logo-11.svg" alt="#">
+                </a>
+              </li>
+              <li class="companies__grid-item">
+                <a class="companies__grid-link" href="#">
+                  <img src="./images/logos/logo-11.svg" alt="#">
+                </a>
+              </li>
+              <li class="companies__grid-item">
+                <a class="companies__grid-link" href="#">
+                  <img src="./images/logos/logo-11.svg" alt="#">
+                </a>
+              </li>
+              <li class="companies__grid-item">
+                <a class="companies__grid-link" href="#">
+                  <img src="./images/logos/logo-11.svg" alt="#">
+                </a>
+              </li>
+              <li class="companies__grid-item">
+                <a class="companies__grid-link" href="#">
+                  <img src="./images/logos/logo-11.svg" alt="#">
+                </a>
+              </li>
+              <li class="companies__grid-item">
+                <a class="companies__grid-link" href="#">
+                  <img src="./images/logos/logo-11.svg" alt="#">
+                </a>
+              </li>
+              <li class="companies__grid-item">
+                <a class="companies__grid-link" href="#">
+                  <img src="./images/logos/logo-11.svg" alt="#">
+                </a>
+              </li>
+              <li class="companies__grid-item">
+                <a class="companies__grid-link" href="#">
+                  <img src="./images/logos/logo-11.svg" alt="#">
+                </a>
+              </li>
+              <li class="companies__grid-item">
+                <a class="companies__grid-link" href="#">
+                  <img src="./images/logos/logo-11.svg" alt="#">
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
       <footer class="footer"></footer>
     </main>
 
