--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
       <section class="main__testimonials testimonials">
         <div class="container">
           <div class="testimonials__inner">
-            <div class="testimonials__heading heding heading--text-center">
+            <div class="testimonials__heading heading heading--center">
               <p class="heading__subtitle">TESTIMONIALS</p>
               <h2 class="heading__title">What our students say</h2>
             </div>
@@ -723,7 +723,7 @@
               </a>
             </div>
             <div class="testimonials__dots">
-              
+
             </div>
           </div>
         </div>
@@ -733,9 +733,9 @@
       <section class="main__companies companies">
         <div class="container">
           <div class="companies__inner">
-            <div class="companies__heading heding heading--text-center">
-              <p class="companies__subtitle">TESTIMONIALS</p>
-              <h2 class="companies__title">What our students say</h2>
+            <div class="companies__heading heading heading--text-center">
+              <p class="heading__subtitle">BEST JOBS FOR YOU</p>
+              <h2 class="heading__title">Our students works here</h2>
             </div>
             <ul class="companies__grid">
               <li class="companies__grid-item">
@@ -799,6 +799,116 @@
                 </a>
               </li>
             </ul>
+          </div>
+        </div>
+      </section>
+
+      <section class="main__program program">
+        <div class="container">
+          <div class="program__inner">
+            <div class="program__content">
+              <div class="program__heading heding">
+                <p class="heading__subtitle">TESTIMONIALS</p>
+                <h2 class="heading__title">What our students say</h2>
+              </div>
+              <ul class="program__accordeon">
+                
+                <li class="program__accordeon-item">
+                  <a class="program__accordeon-link" href="#">
+                    <div class="program__accordeon-head">
+                      <span>Lesson 1.</span> Aliquet lectus urna viverra in odio.
+                    </div>
+                    <div class="program__accordeon-text">
+                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare. Lacus
+                      facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit sed. Curabitur
+                      faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci vitae accumsan id.
+                    </div>
+                  </a>
+                </li>
+
+                <li class="program__accordeon-item">
+                  <a class="program__accordeon-link" href="#">
+                    <div class="program__accordeon-head">
+                      <span>Lesson 1.</span> Aliquet lectus urna viverra in odio.
+                    </div>
+                    <div class="program__accordeon-text">
+                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare. Lacus
+                      facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit sed. Curabitur
+                      faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci vitae accumsan id.
+                    </div>
+                  </a>
+                </li>
+
+                <li class="program__accordeon-item">
+                  <a class="program__accordeon-link" href="#">
+                    <div class="program__accordeon-head">
+                      <span>Lesson 1.</span> Aliquet lectus urna viverra in odio.
+                    </div>
+                    <div class="program__accordeon-text">
+                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare. Lacus
+                      facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit sed. Curabitur
+                      faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci vitae accumsan id.
+                    </div>
+                  </a>
+                </li>
+
+                <li class="program__accordeon-item">
+                  <a class="program__accordeon-link" href="#">
+                    <div class="program__accordeon-head">
+                      <span>Lesson 1.</span> Aliquet lectus urna viverra in odio.
+                    </div>
+                    <div class="program__accordeon-text">
+                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare. Lacus
+                      facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit sed. Curabitur
+                      faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci vitae accumsan id.
+                    </div>
+                  </a>
+                </li>
+
+                <li class="program__accordeon-item">
+                  <a class="program__accordeon-link" href="#">
+                    <div class="program__accordeon-head">
+                      <span>Lesson 1.</span> Aliquet lectus urna viverra in odio.
+                    </div>
+                    <div class="program__accordeon-text">
+                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare. Lacus
+                      facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit sed. Curabitur
+                      faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci vitae accumsan id.
+                    </div>
+                  </a>
+                </li>
+
+                <li class="program__accordeon-item">
+                  <a class="program__accordeon-link" href="#">
+                    <div class="program__accordeon-head">
+                      <span>Lesson 1.</span> Aliquet lectus urna viverra in odio.
+                    </div>
+                    <div class="program__accordeon-text">
+                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare. Lacus
+                      facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit sed. Curabitur
+                      faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci vitae accumsan id.
+                    </div>
+                  </a>
+                </li>
+
+                <li class="program__accordeon-item">
+                  <a class="program__accordeon-link" href="#">
+                    <div class="program__accordeon-head">
+                      <span>Lesson 1.</span> Aliquet lectus urna viverra in odio.
+                    </div>
+                    <div class="program__accordeon-text">
+                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare. Lacus
+                      facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit sed. Curabitur
+                      faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci vitae accumsan id.
+                    </div>
+                  </a>
+                </li>
+
+              </ul>
+            </div>
+            <div class="program_image">
+              <img src="./images/program-img.svg" alt="">
+            </div>
           </div>
         </div>
       </section>
