section proram bug fixed

--- a/index.html
+++ b/index.html
@@ -808,8 +808,8 @@
           <div class="program__inner">
             <div class="program__content">
               <div class="program__heading heading">
-                <p class="heading__subtitle">TESTIMONIALS</p>
-                <h2 class="heading__title">What our students say</h2>
+                <p class="heading__subtitle">COURSE PROGRAM</p>
+                <h2 class="heading__title">What will you learn</h2>
               </div>
               <ul class="program__accordeon">
                 
