--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
 
 <body>
   <div class="wrapper">
+    <div class="overlay overlay--show"></div>
     <header class="header" id="header">
-      <div class="header-top">
+      <a class="burger burger--follow" href="#">
+        <span></span>
+      </a>
+      <div class="header__top header__top--open">
         <div class="container">
-          <div class="header-top__inner">
+          <div class="header__top-inner">
             <a class="header__logo logo" href="/">
               <img src="./images/logo.svg" alt="logo">
             </a>
@@ -54,9 +58,9 @@
         </div>
       </div>
 
-      <div class="header-body">
+      <div class="header__body">
         <div class="container">
-          <div class="header-body__inner">
+          <div class="header__body-inner">
             <div class="header__main">
               <div class="header__content">
                 <a class="header__play" href="https://www.youtube.com/watch?v=Wx7vo__48oE" data-fancybox>
