adaptation cert section

--- a/index.html
+++ b/index.html
@@ -299,17 +299,17 @@
                 <p class="heading__subtitle">createx certificate</p>
                 <h2 class="heading__title">Your expertise will be confirmed</h2>
               </div>
-              <p class="sert__text">
+              <p class="cert__text">
                 We are accredited by international professional organizations and institutes:
               </p>
-              <ul class="sert__logos">
-                <li class="sert__logos-item">
+              <ul class="cert__logos">
+                <li class="cert__logos-item">
                   <img src="./images/logos/1.svg" alt="">
                 </li>
-                <li class="sert__logos-item">
+                <li class="cert__logos-item">
                   <img src="./images/logos/2.svg" alt="">
                 </li>
-                <li class="sert__logos-item">
+                <li class="cert__logos-item">
                   <img src="./images/logos/3.svg" alt="">
                 </li>
               </ul>
