adaptation program section

--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
 
               </ul>
             </div>
-            <div class="program_image">
+            <div class="program__image">
               <img src="./images/program-img.svg" alt="">
             </div>
           </div>
