--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="wrapper">
-    <div class="overlay overlay--show"></div>
+    <div class="overlay "></div>
     <header class="header" id="header">
       <a class="burger burger--follow" href="#">
         <span></span>
@@ -1294,7 +1294,7 @@
             </div>
 
             <div class="footer__top-col">
-              <h3 class="footer__top-title">SITE maP</h3>
+              <h3 class="footer__top-title footer__top-title--slide">SITE maP</h3>
               <ul class="footer__top-list">
 
                 <li class="footer__top-item">
@@ -1320,7 +1320,7 @@
             </div>
 
             <div class="footer__top-col">
-              <h3 class="footer__top-title">COURSEs</h3>
+              <h3 class="footer__top-title footer__top-title--slide">COURSEs</h3>
               <ul class="footer__top-list">
 
                 <li class="footer__top-item">
@@ -1346,7 +1346,7 @@
             </div>
 
             <div class="footer__top-col">
-              <h3 class="footer__top-title">COntACT US</h3>
+              <h3 class="footer__top-title footer__top-title--slide">COntACT US</h3>
               <ul class="footer__top-list">
 
                 <li class="footer__top-item">
